# leaksignal

./: Cargo.toml  POLICY.md  README.md
.cargo/: config
examples/envoy/: envoy_command_remote_wasm.yaml  envoy_local.yaml
examples/istio/: leaksignal.yaml  leaksignal_local.yaml
examples/policies/: simple_policy.yaml
leakpolicy/: Cargo.toml
leakpolicy/src/: lib.rs  path_glob.rs
leaksignal/: Cargo.toml  build.rs
leaksignal/benches/: regex_bench.rs
leaksignal/proto/: grpc_service.proto  leaksignal.proto
leaksignal/src/: config.rs  evaluator.rs  http_response.rs  lib.rs  metric.rs  pipe.rs  policy.rs  root.rs
leaksignal/src/parsers/: html.rs  mod.rs
leaksignal/src/parsers/json/: mod.rs  parse.rs  parse_tests.txt
scripts/: release.sh
scripts/local/: Dockerfile-proxy  Dockerfile-web-service  debug.sh  docker-compose.yaml  run.sh
scripts/local/config/: .gitignore  envoy.yaml  envoy_local.yaml  local_policy.yaml
scripts/local/pub/: ssn001.html  test.json
